fixed the spacing between the attende information on the botttom of the owner card in the dashoboard + the alignment of the icon is stil underwork

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -77,18 +77,18 @@
 }
 
 .card-product .card-product-infos {
-  // padding: 16px;
+  padding: 16px;
 }
 
 .card_attendee {
   width: 120px;
 }
 
-.s_avatar {
-  width: 4px
-}
+// .s_avatar {
+//   width: 4px
+// }
 
-.link_color {
-  color: $dark-gray;
+// .link_color {
+//   color: $dark-gray;
 
-}
+// }
